Cleanup: untrack model/output files, g, update pipelines

--- a/proyectomachineml/notebooks/04_Modeling_Regresion.ipynb
+++ b/proyectomachineml/notebooks/04_Modeling_Regresion.ipynb
@@ -657,9 +657,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Kedro (proyectomachineml)",
+   "display_name": "Python (proyecto_ml)",
    "language": "python",
-   "name": "kedro_proyectomachineml"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
